--- a/src/app/module/test/pages/home/home.component.html
+++ b/src/app/module/test/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- <div class="row">
     <div class="col-lg-3">
         <div class="card card-inverse card-primary mb-3 text-center rounded-0">
-            <div class="card-block">
+            <div class="card-body">
                 <blockquote class="card-blockquote">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                     <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
@@ -11,7 +11,7 @@
     </div>
     <div class="col-lg-3">
         <div class="card card-inverse card-info mb-3 text-center rounded-0">
-            <div class="card-block">
+            <div class="card-body">
                 <blockquote class="card-blockquote">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                     <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
@@ -21,7 +21,7 @@
     </div>
     <div class="col-lg-3">
         <div class="card card-inverse card-warning mb-3 text-center rounded-0">
-            <div class="card-block">
+            <div class="card-body">
                 <blockquote class="card-blockquote">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                     <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
@@ -31,7 +31,7 @@
     </div>
     <div class="col-lg-3">
         <div class="card card-inverse card-danger mb-3 text-center rounded-0">
-            <div class="card-block">
+            <div class="card-body">
                 <blockquote class="card-blockquote">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                     <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
