--- a/src/app/module/test/pages/loading-service/loading-service.component.html
+++ b/src/app/module/test/pages/loading-service/loading-service.component.html
@@ -1,6 +1,6 @@
 <div class="card rounded-0">
   <div class="card-header"><i class="fa fa-file-text-o"></i> Loading Service</div>
-  <div class="card-block">
+  <div class="card-body">
     <button class="btn btn-scondary" (click)="showLoading('fa fa-spinner fa-pulse fa-5x fa-fw')">
       <i class="fa fa-spinner fa-pulse fa-fw"></i> play
     </button>
