--- a/src/app/module/test/pages/table-demo/table-demo.component.html
+++ b/src/app/module/test/pages/table-demo/table-demo.component.html
@@ -2,7 +2,7 @@
     <div class="card-header">
         <i class="fa fa-table"></i> Table Example
     </div>
-    <div class="card-block">
+    <div class="card-body">
         <table class="table table-striped">
             <thead>
                 <tr>
