--- a/src/app/module/test/pages/alert-window/alert-window.component.html
+++ b/src/app/module/test/pages/alert-window/alert-window.component.html
@@ -1,21 +1,21 @@
 <div class="card rounded-0">
     <div class="card-header">提示窗口示例</div>
-    <div class="card-block">
-        <button class="mt-1 btn btn-danger" (click)="showAlert('card-inverse card-danger','危险','你确定要这么做吗？',alert)">Danger</button>
-        <button class="mt-1 btn btn-warning" (click)="showAlert('card-inverse card-warning','警告','请不要这么做',alert)">Warning</button>
-        <button class="mt-1 btn btn-success" (click)="showAlert('card-inverse card-success','成功','这是一个成功的例子',alert)">Success</button>
-        <button class="mt-1 btn btn-info" (click)="showAlert('card-inverse card-info','信息','这是一个提示信息',alert)">Info</button>
-        <button class="mt-1 btn btn-outline-danger" (click)="showAlert('bg-white card-outline-danger','危险','你确定要这么做吗？',alert)">Danger</button>
-        <button class="mt-1 btn btn-outline-warning" (click)="showAlert('bg-white card-outline-warning','警告','请不要这么做',alert)">Warning</button>
-        <button class="mt-1 btn btn-outline-success" (click)="showAlert('bg-white card-outline-success','成功','这是一个成功的例子',alert)">Success</button>
-        <button class="mt-1 btn btn-outline-info" (click)="showAlert('bg-white card-outline-info','信息','这是一个提示信息',alert)">Info</button>
+    <div class="card-body">
+        <button class="mt-1 btn btn-danger" (click)="showAlert('text-white bg-danger','危险','你确定要这么做吗？',alert)">Danger</button>
+        <button class="mt-1 btn btn-warning" (click)="showAlert('text-dark bg-warning','警告','请不要这么做',alert)">Warning</button>
+        <button class="mt-1 btn btn-success" (click)="showAlert('text-white bg-success','成功','这是一个成功的例子',alert)">Success</button>
+        <button class="mt-1 btn btn-info" (click)="showAlert('text-white bg-info','信息','这是一个提示信息',alert)">Info</button>
+        <button class="mt-1 btn btn-outline-danger" (click)="showAlert('border-danger text-danger','危险','你确定要这么做吗？',alert)">Danger</button>
+        <button class="mt-1 btn btn-outline-warning" (click)="showAlert('border-warning text-warning','警告','请不要这么做',alert)">Warning</button>
+        <button class="mt-1 btn btn-outline-success" (click)="showAlert('border-success text-success','成功','这是一个成功的例子',alert)">Success</button>
+        <button class="mt-1 btn btn-outline-info" (click)="showAlert('border-info text-info','信息','这是一个提示信息',alert)">Info</button>
     </div>
 </div>
 <!--CODW VIEW-->
 <br>
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-file-code-o fa-fw fa-lg" aria-hidden="true"></i>代码演示</div>
-    <div class="card-block">
+    <div class="card-body">
         <i class="fa fa-code fa-fw" aria-hidden="true"></i>HTML代码：
         <handy-syntax-highlighter [language]="'html'" [content]="html_code"></handy-syntax-highlighter>
         <i class="fa fa-code fa-fw" aria-hidden="true"></i>TS代码：
