--- a/src/app/module/test/pages/charts-demo/charts-demo.component.html
+++ b/src/app/module/test/pages/charts-demo/charts-demo.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header"><i class="fa fa-line-chart fa-fw fa-lg" aria-hidden="true"></i>图表数据</div>
-    <div class="card-block">
+    <div class="card-body">
         <blockquote class="card-blockquote">
             <table class="table table-striped">
                 <thead>
@@ -25,7 +25,7 @@
             <div class="col-6 text-center">条形图</div>
         </div>
     </div>
-    <div class="card-block">
+    <div class="card-body">
         <blockquote class="card-blockquote row">
             <div class="col-6">
                 <canvas baseChart [datasets]="chartData" [labels]="chartLabels" [options]="lineChartOptions" [colors]="chartColors" [legend]="true" [chartType]="'line'"></canvas>
@@ -55,7 +55,7 @@
             <div class="col-6 text-center">雷达图</div>
         </div>
     </div>
-    <div class="card-block">
+    <div class="card-body">
         <blockquote class="card-blockquote row">
             <div class="col-6">
                 <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="'doughnut'" [legend]="true"></canvas>
@@ -74,7 +74,7 @@
             <div class="col-6 text-center">极地面积图</div>
         </div>
     </div>
-    <div class="card-block">
+    <div class="card-body">
         <blockquote class="card-blockquote row">
             <div class="col-6">
                 <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="'pie'" [legend]="true"></canvas>
