--- a/src/app/module/test/pages/confirm-window/confirm-window.component.html
+++ b/src/app/module/test/pages/confirm-window/confirm-window.component.html
@@ -1,6 +1,6 @@
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-comment-o fa-fw fa-lg" aria-hidden="true"></i>确认弹窗示例</div>
-    <div class="card-block">
+    <div class="card-body">
         <button (click)="openDialog('success')" class="mt-1 btn btn-outline-success">Success</button>
         <button (click)="openDialog('info')" class="mt-1 btn btn-outline-info">Info</button>
         <button (click)="openDialog('warning')" class="mt-1 btn btn-outline-warning">Warning</button>
@@ -11,7 +11,7 @@
 <br>
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-file-code-o fa-fw fa-lg" aria-hidden="true"></i>代码演示</div>
-    <div class="card-block">
+    <div class="card-body">
         <i class="fa fa-code fa-fw" aria-hidden="true"></i>TS代码：
         <handy-syntax-highlighter [language]="'typescript'" [content]="code"></handy-syntax-highlighter>
     </div>
