--- a/src/app/module/test/pages/select-demo/select-demo.component.html
+++ b/src/app/module/test/pages/select-demo/select-demo.component.html
@@ -1,6 +1,6 @@
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i> <a href="https://material.angular.io/components/select/overview">下拉选择示例--Material</a></div>
-    <div class="card-block">
+    <div class="card-body">
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">have placeholder</label>
             <div class="col-sm-10">
@@ -26,7 +26,7 @@
 <br>
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i> <a href="https://v4-alpha.getbootstrap.com/components/forms/">下拉选择示例--Bootstrap</a></div>
-    <div class="card-block">
+    <div class="card-body">
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">custom</label>
             <div class="col-sm-10">
@@ -56,7 +56,7 @@
 <br>
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i> <a href="http://valor-software.com/ng2-select/">下拉选择示例--ng2-select</a></div>
-    <div class="card-block">
+    <div class="card-body">
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">custom</label>
             <div class="col-sm-10">
