--- a/src/app/module/test/pages/toastr-demo/toastr-demo.component.html
+++ b/src/app/module/test/pages/toastr-demo/toastr-demo.component.html
@@ -1,6 +1,6 @@
 <div class="card rounded-0">
   <div class="card-header"><i class="fa fa-file-text-o"></i> Toastr Service</div>
-  <div class="card-block">
+  <div class="card-body">
     <button class="btn btn-outline-warning" (click)="showWarning()">Warning</button>
     <button class="btn btn-outline-danger" (click)="showDanger()">Danger</button>
     <button class="btn btn-outline-success" (click)="showSuccess()">Success</button>
