--- a/src/app/module/test/pages/upload-demo/upload-demo.component.html
+++ b/src/app/module/test/pages/upload-demo/upload-demo.component.html
@@ -1,6 +1,6 @@
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-file-text"></i> 单文件上传</div>
-    <div class="card-block">
+    <div class="card-body">
         <div class="row">
             <div class="col-sm">
                 <div class="input-group">
@@ -23,7 +23,7 @@
 <br>
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-file-text"></i> 单图选择-表单提交</div>
-    <div class="card-block">
+    <div class="card-body">
         <app-image-input-form [image]="image" (onChange)="getFile($event)"></app-image-input-form>
         <p class="text-info"><i class="fa fa-code fa-fw" aria-hidden="true"></i>HTML代码：</p>
         <handy-syntax-highlighter [language]="'html'" [content]="html_code_sigle"></handy-syntax-highlighter>
@@ -34,14 +34,14 @@
 <br>
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-file-text"></i> 单图选择-异步上传</div>
-    <div class="card-block">
+    <div class="card-body">
         <app-image-input-upload [errorAlertText]="'woops,upload was failed!'" [image]="image" [config]="uploadConfig"></app-image-input-upload>
     </div>
 </div>
 <br>
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-file-text"></i> 多图选择-表单提交</div>
-    <div class="card-block">
+    <div class="card-body">
         <app-images-input-form [images]="images" (onChange)="getFiles($event)"></app-images-input-form>
         <p class="text-info"><i class="fa fa-code fa-fw" aria-hidden="true"></i>HTML代码：</p>
         <handy-syntax-highlighter [language]="'html'" [content]="html_code_multi"></handy-syntax-highlighter>
@@ -52,7 +52,7 @@
 <br>
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-file-text"></i> 多图选择-异步上传</div>
-    <div class="card-block">
+    <div class="card-body">
         <app-images-input-upload [images]="image" (onChange)="getFiles($event)" [config]="uploadConfig"></app-images-input-upload>
     </div>
 </div>
