--- a/src/app/tool/components/alert/alert.component.html
+++ b/src/app/tool/components/alert/alert.component.html
@@ -1,11 +1,24 @@
-<div class="fixed-top w-100 h-100" [ngStyle]="styles" [hidden]="!display">
+<!-- <div class="fixed-top w-100 h-100" [ngStyle]="styles" [hidden]="!display">
   <div class="card {{className}} text-center window-alert">
-    <div class="card-block p-1">
+    <div class="card-body p-1">
       <blockquote class="card-blockquote">
         <p class="text-left"><i class="fa fa-exclamation-triangle"></i> {{title}}<span (click)="display=false" class="pull-right pointer">&times;</span></p>
         <p>{{message}}</p>
         <p class="text-right"><span (click)="doCancel()" class="pointer mr-2 ml-2">取消</span><span (click)="doOk()" class="pointer mr-2 ml-2">确认</span></p>
       </blockquote>
+    </div>
+  </div>
+</div> -->
+<div class="fixed-top w-100 h-100 window-center" [ngStyle]="styles" [hidden]="!display">
+  <div class="card {{className}} window-alert rounded-0">
+    <div class="card-header"><i class="fa fa-exclamation-triangle a-fw"></i>{{title}}
+      <span (click)="doCancel()" class="close pull-right pointer">&times;</span>
+    </div>
+    <div class="card-body">
+      <p class="card-text">{{message}}</p>
+      <p class="card-text text-right">
+        <span (click)="doCancel()" class="pointer mr-2 ml-2">取消</span><span (click)="doOk()" class="pointer mr-2 ml-2">确认</span>
+      </p>
     </div>
   </div>
 </div>
