--- a/src/app/module/test/pages/charts-demo/charts-demo.component.html
+++ b/src/app/module/test/pages/charts-demo/charts-demo.component.html
@@ -1,3 +1,6 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+</nav>
 <div class="card">
     <div class="card-header"><i class="fa fa-line-chart fa-fw fa-lg" aria-hidden="true"></i>图表数据</div>
     <div class="card-body">
