--- a/src/app/system/components/menu/menu.component.html
+++ b/src/app/system/components/menu/menu.component.html
@@ -6,7 +6,7 @@
     <hr class="menu-line">
     <div class="menu-manager">
         <div class="menu-manager-title" (click)="isCollopseArray[0]=!isCollopseArray[0]">
-            <img width="40" height="40" class="ml-3 mr-3 rounded-circle" src="/assets/image/photo.jpg">
+            <img width="40" height="40" class="avatar ml-3 mr-3 rounded-circle" src="/assets/image/avatar/4.jpg">
             <span>hello1024</span>
             <i class="pull-right fa fa-caret-down right-icon mr-3" [ngClass]="{'icon-up': isCollopseArray[0],'icon-down':!isCollopseArray[0]}"></i>
         </div>
