--- a/src/app/system/components/menu/menu.component.scss
+++ b/src/app/system/components/menu/menu.component.scss
@@ -29,6 +29,11 @@
     margin-left: 1.3rem !important;
 }
 
+.avatar {
+    box-shadow: 0px 0px 1px #7e7e7e;
+    // border: 1px solid white;
+}
+
 .menu-list-active {
     //background-color: rgba(0, 0, 0, 0.5);
 }
