--- a/src/app/system/pages/menu-setting/menu-setting.component.html
+++ b/src/app/system/pages/menu-setting/menu-setting.component.html
@@ -1,3 +1,7 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+    <span class="breadcrumb-item active"><i class="fa fa-bars fa-fw fa-lg" aria-hidden="true"></i>菜单设置</span>
+</nav>
 <div class="card rounded-0">
     <div class="card-header">菜单设置</div>
     <div class="card-body">
