--- a/src/app/system/pages/role-manager/role-manager.component.html
+++ b/src/app/system/pages/role-manager/role-manager.component.html
@@ -1,1 +1,5 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+    <span class="breadcrumb-item active"><i class="fa fa-users fa-fw fa-lg" aria-hidden="true"></i>角色管理</span>
+</nav>
 <app-tree [trees]="roles"></app-tree>
