--- a/src/app/module/test/pages/alert-window/alert-window.component.html
+++ b/src/app/module/test/pages/alert-window/alert-window.component.html
@@ -1,3 +1,6 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+</nav>
 <div class="card rounded-0">
     <div class="card-header">提示窗口示例</div>
     <div class="card-body">
