--- a/src/app/module/test/pages/loading-service/loading-service.component.html
+++ b/src/app/module/test/pages/loading-service/loading-service.component.html
@@ -1,14 +1,17 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+</nav>
 <div class="card rounded-0">
-  <div class="card-header"><i class="fa fa-file-text-o"></i> Loading Service</div>
-  <div class="card-body">
-    <button class="btn btn-scondary" (click)="showLoading('fa fa-spinner fa-pulse fa-5x fa-fw')">
+    <div class="card-header"><i class="fa fa-file-text-o"></i> Loading Service</div>
+    <div class="card-body">
+        <button class="btn btn-scondary" (click)="showLoading('fa fa-spinner fa-pulse fa-5x fa-fw')">
       <i class="fa fa-spinner fa-pulse fa-fw"></i> play
     </button>
-    <button class="btn btn-scondary" (click)="showLoading('fa fa-circle-o-notch fa-spin fa-5x fa-fw')">
+        <button class="btn btn-scondary" (click)="showLoading('fa fa-circle-o-notch fa-spin fa-5x fa-fw')">
       <i class="fa fa-circle-o-notch fa-spin fa-fw"></i> play
     </button>
-    <button class="btn btn-outline-warning" (click)="showFlash('span')">play span</button>
-    <button class="btn btn-outline-danger" (click)="showFlash('squre')">play squre</button>    
-    <button class="btn btn-outline-success" (click)="showFlash('circle')">play circle</button>      
-  </div>
+        <button class="btn btn-outline-warning" (click)="showFlash('span')">play span</button>
+        <button class="btn btn-outline-danger" (click)="showFlash('squre')">play squre</button>
+        <button class="btn btn-outline-success" (click)="showFlash('circle')">play circle</button>
+    </div>
 </div>
