--- a/src/app/module/test/pages/request-service/request-service.component.html
+++ b/src/app/module/test/pages/request-service/request-service.component.html
@@ -1,3 +1,6 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+</nav>
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-internet-explorer fa-fw"></i>请求测试-请在控制台查看请求结果</div>
     <div class="card-body">
