--- a/src/app/module/test/pages/select-demo/select-demo.component.html
+++ b/src/app/module/test/pages/select-demo/select-demo.component.html
@@ -1,3 +1,6 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+</nav>
 <div class="card rounded-0">
     <div class="card-header"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i> <a href="https://material.angular.io/components/select/overview">下拉选择示例--Material</a></div>
     <div class="card-body">
