--- a/src/app/module/test/pages/toastr-demo/toastr-demo.component.html
+++ b/src/app/module/test/pages/toastr-demo/toastr-demo.component.html
@@ -1,9 +1,12 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+</nav>
 <div class="card rounded-0">
-  <div class="card-header"><i class="fa fa-file-text-o"></i> Toastr Service</div>
-  <div class="card-body">
-    <button class="btn btn-outline-warning" (click)="showWarning()">Warning</button>
-    <button class="btn btn-outline-danger" (click)="showDanger()">Danger</button>
-    <button class="btn btn-outline-success" (click)="showSuccess()">Success</button>
-    <button class="btn btn-outline-info" (click)="showInfo()">Info</button>
-  </div>
+    <div class="card-header"><i class="fa fa-file-text-o"></i> Toastr Service</div>
+    <div class="card-body">
+        <button class="btn btn-outline-warning" (click)="showWarning()">Warning</button>
+        <button class="btn btn-outline-danger" (click)="showDanger()">Danger</button>
+        <button class="btn btn-outline-success" (click)="showSuccess()">Success</button>
+        <button class="btn btn-outline-info" (click)="showInfo()">Info</button>
+    </div>
 </div>
