--- a/src/app/module/test/pages/upload-service/upload-service.component.html
+++ b/src/app/module/test/pages/upload-service/upload-service.component.html
@@ -1,14 +1,17 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+</nav>
 <div class="card rounded-0">
-  <div class="card-header"><i class="fa fa-file-text"></i> 单图选择-表单提交</div>
-  <div class="card-body">
-    <app-image-input-form (onChange)="file=$event.file"></app-image-input-form>
-    <div class="mt-1">
-      <button (click)="tryUploadFile()" class="btn btn-success"><i class="fa fa-check fa-fw"></i>Upload File</button>
+    <div class="card-header"><i class="fa fa-file-text"></i> 单图选择-表单提交</div>
+    <div class="card-body">
+        <app-image-input-form (onChange)="file=$event.file"></app-image-input-form>
+        <div class="mt-1">
+            <button (click)="tryUploadFile()" class="btn btn-success"><i class="fa fa-check fa-fw"></i>Upload File</button>
+        </div>
+        <br>
+        <p class="text-info"><i class="fa fa-code fa-fw" aria-hidden="true"></i>HTML代码：</p>
+        <handy-syntax-highlighter [language]="'html'" [content]="html_code"></handy-syntax-highlighter>
+        <p class="text-info"><i class="fa fa-code fa-fw" aria-hidden="true"></i>TS代码：</p>
+        <handy-syntax-highlighter [language]="'typescript'" [content]="ts_code"></handy-syntax-highlighter>
     </div>
-    <br>
-    <p class="text-info"><i class="fa fa-code fa-fw" aria-hidden="true"></i>HTML代码：</p>
-    <handy-syntax-highlighter [language]="'html'" [content]="html_code"></handy-syntax-highlighter>
-    <p class="text-info"><i class="fa fa-code fa-fw" aria-hidden="true"></i>TS代码：</p>
-    <handy-syntax-highlighter [language]="'typescript'" [content]="ts_code"></handy-syntax-highlighter>
-  </div>
 </div>
