--- a/src/app/system/pages/permission-manager/permission-manager.component.html
+++ b/src/app/system/pages/permission-manager/permission-manager.component.html
@@ -1,3 +1,7 @@
+<nav class="breadcrumb-pad p-0 m-0">
+    <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
+    <span class="breadcrumb-item active"><i class="fa fa-lock fa-fw fa-lg" aria-hidden="true"></i>权限设置</span>
+</nav>
 <p>
-    permission-manager works!
+    权限页面还没有写~~
 </p>
