--- a/src/app/system/pages/role-manager/role-manager.component.html
+++ b/src/app/system/pages/role-manager/role-manager.component.html
@@ -2,4 +2,9 @@
     <a class="breadcrumb-item" routerLink="/"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>首页</a>
     <span class="breadcrumb-item active"><i class="fa fa-users fa-fw fa-lg" aria-hidden="true"></i>角色管理</span>
 </nav>
-<app-tree [trees]="roles"></app-tree>
+<div class="card rounded-0">
+    <div class="card-header"><i class="fa fa-users fa-fw"></i>Role List</div>
+    <div class="card-body">
+        <!-- <app-tree [trees]="roles" (activeOne)="showChangePad($event)"></app-tree> -->
+    </div>
+</div>
