--- a/src/app/tool/components/tree/tree.component.html
+++ b/src/app/tool/components/tree/tree.component.html
@@ -1,5 +1,5 @@
 <div class="d-inline-block text-center p-3" *ngFor="let parent of (trees|filterByParentId:parentid)">
-    <div class="leaf text-center text-white bg-primary rounded-0 hover">{{parent.text}}</div>
+    <div (click)="doClick(parent)" class="leaf text-center card-shadow hover">{{parent.text}}</div>
     <div class="w-100">
         <app-tree [trees]="trees" [parentid]="parent.id"></app-tree>
     </div>
