--- a/src/app/system/components/login/login.component.html
+++ b/src/app/system/components/login/login.component.html
@@ -35,6 +35,6 @@
                 </div>
             </form>
         </div>
-        <footer class="fixed-bottom text-center window-header"><i>Copyright © 2016 XiaoJian. All Rights Reserved.| 赣 ICP备16010587号</i></footer>
+        <footer routerLink="/lazy" class="fixed-bottom text-center window-header"><i>Copyright © 2016 XiaoJian. All Rights Reserved.| 赣 ICP备16010587号</i></footer>
     </div>
 </div>
