--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,10 @@ a:visited {
     cursor: pointer;
 }
 
+.btn:disabled {
+    cursor: not-allowed !important;
+}
+
 // .btn-outline-info {
 //     border-color: #caeffb;
 //     background-color: white;
@@ -127,6 +131,7 @@ a:visited {
 .card-shadow {
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
     border-style: none !important;
+    border-radius: 0;
 }
 
 .card-border {
@@ -165,8 +170,9 @@ div {
 
 .ui-select-toggle {
     background-color: white !important;
-    color:black !important;
+    color: black !important;
 }
+
 
 /*loading css*/
 
